--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,11 +74,13 @@ x-airflow-common:
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     # The following line can be used to set a custom config file, stored in the local config folder
     AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
+    PYTHONPATH: '/opt/airflow/packages'
   volumes:
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR:-.}/packages:/opt/airflow/packages
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -269,6 +271,13 @@ services:
         echo "Running airflow config list to create default config file if missing."
         echo
         /entrypoint airflow config list >/dev/null
+        echo
+        echo "Importing Airflow Variables from variables.yaml"
+        if [ -f /opt/airflow/config/variables.yaml ]; then
+          /entrypoint airflow variables import /opt/airflow/config/variables.yaml
+        else
+          echo "No variables.yaml found, skipping import"
+        fi
         echo
         echo "Files in shared volumes:"
         echo
