--- a/.github/workflows/tag-on-merge.yaml
+++ b/.github/workflows/tag-on-merge.yaml
@@ -13,29 +13,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Get latest tag
-        id: get_tag
+      - name: Extract version from pyproject.toml
+        id: get_version
+        run: |
+          version=$(grep '^version' pyproject.toml | head -n 1 | cut -d '"' -f2)
+          echo "Version from pyproject.toml: $version"
+          echo "version=v$version" >> $GITHUB_OUTPUT
+
+      - name: Get latest Git tag
+        id: get_latest_tag
         run: |
           git fetch --tags
           latest_tag=$(git tag --sort=-creatordate | head -n 1)
-          echo "Latest tag: $latest_tag"
+          echo "Latest Git tag: $latest_tag"
           echo "latest_tag=$latest_tag" >> $GITHUB_OUTPUT
 
-      - name: Bump patch version
-        id: bump_version
-        run: |
-          current=${{ steps.get_tag.outputs.latest_tag }}
-          if [ -z "$current" ]; then
-            echo "new_tag=0.1.0" >> $GITHUB_OUTPUT
-          else
-            IFS='.' read -r major minor patch <<<"${current#v}"
-            patch=$((patch + 1))
-            echo "new_tag=v$major.$minor.$patch" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Create new tag
+      - name: Create tag if version changed
+        if: steps.get_version.outputs.version != steps.get_latest_tag.outputs.latest_tag
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git tag ${{ steps.bump_version.outputs.new_tag }}
-          git push origin ${{ steps.bump_version.outputs.new_tag }}
+          git tag ${{ steps.get_version.outputs.version }}
+          git push origin ${{ steps.get_version.outputs.version }}
