--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -342,5 +342,19 @@ services:
       airflow-init:
         condition: service_completed_successfully
 
+  analytics:
+    build:
+      context: .
+      dockerfile: Dockerfile.analytics
+      args:
+        SPARK_VERSION: "3.5.1"
+        HADOOP_PROFILE: "3"
+        HIVE_VERSION: "3.1.3"
+    container_name: analytics
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/data:/data
+      - ${AIRFLOW_PROJ_DIR:-.}/spark-jars:/opt/spark-jars
+    restart: unless-stopped
+
 volumes:
   postgres-db-volume:
