--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,36 @@
+# Runtime data
+data/*
+!data/.gitkeep
 logs/
-.DS_Store
+
+# Environment
+.env
+
+# Python
+__pycache__/
 */__pycache__/
-venv
+*.pyc
+*.pyo
+*.pyd
+venv/
+.venv/
+dist/
+build/
+*.egg-info/
+.pytest_cache/
+.coverage
+
+# Spark / Big Data
+*.parquet
+*.crc
+
+# IDEs
 .vscode/
-*/*.egg-info
+.idea/
+.ipynb_checkpoints/
+
+# OS
+.DS_Store
+
+# Docker
+docker-compose.override.yml
