UPD to work with connection

--- a/config/variables.yaml
+++ b/config/variables.yaml
@@ -1,5 +1,5 @@
 API:
-  URL: "https://api.api-onepiece.com/v2"
+  CONN_ID: "onepiece_api"
   LANGUAGE: "en"
   ENDPOINTS:
     characters: "characters"
